⚖️ switch to MIT license

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "url": "git+https://github.com/openinf/util-types.git"
   },
   "keywords": [],
-  "author": "The AMP HTML Authors",
-  "license": "Apache-2.0",
+  "author": "the OpenINF authors",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/openinf/util-types/issues"
   },
