--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "./index.js",
   "types": "./index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "npm run compile-src && npm run compile-doc",
+    "compile-src": "tsc --project ./",
+    "compile-doc": "jsdoc2md --template README.hbs --files index.js > ./README.md"
   },
   "repository": {
     "type": "git",
@@ -25,5 +27,9 @@
   "description": "Common JavaScript Object type-related utilities ",
   "dependencies": {
     "@openinf/util-types": "^1.2.0"
+  },
+  "devDependencies": {
+    "jsdoc-to-markdown": "^6.0.1",
+    "typescript": "^4.1.3"
   }
 }
