⚖️ update copyright info

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "type",
     "utilities"
   ],
-  "author": "the OpenINF authors",
+  "author": "The OpenINF Authors",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/openinf/util-types/issues"
