chore(deps): pin @openinf/util-types to 2.1.3
Signed-off-by: Derek Lewis <DerekNonGeneric@inf.is>

--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "typescript": "4.7.4"
   },
   "dependencies": {
-    "@openinf/util-types": "^2.1.3"
+    "@openinf/util-types": "2.1.3"
   }
 }
