--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "compile-doc": "jsdoc2md --template README.hbs --files index.js > ./README.md",
     "test": "npx jasmine"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/openinf/util-types.git"
-  },
+  "repository": "openinf/util-object",
   "keywords": [
     "JavaScript",
     "Object",
@@ -21,10 +18,8 @@
   ],
   "author": "The OpenINF Authors",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/openinf/util-types/issues"
-  },
-  "homepage": "https://github.com/openinf/util-types#readme",
+  "bugs": "https://github.com/openinf/util-object/issues",
+  "homepage": "https://github.com/openinf/util-object#readme",
   "description": "Common JavaScript Object type-related utilities ",
   "devDependencies": {
     "chai": "4.3.6",
