fix(automation): disable deepsource test-coverage
Signed-off-by: Derek Lewis <DerekNonGeneric@inf.is>

--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -6,7 +6,7 @@ exclude_patterns = ["index.js"]
 
 [[analyzers]]
 name = "test-coverage"
-enabled = true
+enabled = false
 
 [[analyzers]]
 name = "shell"
