--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 *               text=auto
 build/**        linguist-generated=false
 lib/**          linguist-generated=true
-docs/**         linguist-documentation
+doc/**          linguist-documentation
