--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@openinf/util-object",
   "version": "2.0.1",
-  "main": "./index.js",
-  "types": "./index.d.ts",
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "scripts": {
     "compile": "npm run compile-src && npm run compile-doc",
     "compile-src": "tsc --project ./",
@@ -22,9 +22,15 @@
   "homepage": "https://github.com/openinf/util-object#readme",
   "description": "Common JavaScript Object type-related utilities ",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "5.32.0",
+    "@typescript-eslint/parser": "5.32.0",
     "chai": "4.3.6",
+    "eslint": "8.21.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.2.1",
     "jasmine": "4.3.0",
     "jsdoc-to-markdown": "7.1.1",
+    "prettier": "2.7.1",
     "typescript": "4.7.4"
   },
   "dependencies": {
