style(eslint): second take at typescript linting
Signed-off-by: Derek Lewis <DerekNonGeneric@inf.is>

--- a/package.json
+++ b/package.json
@@ -10,19 +10,34 @@
     "test": "npx jasmine"
   },
   "repository": "openinf/util-object",
-  "keywords": ["JavaScript", "Object", "type", "utilities"],
+  "keywords": [
+    "JavaScript",
+    "Object",
+    "type",
+    "utilities"
+  ],
   "author": "The OpenINF Authors",
   "license": "MIT",
   "bugs": "https://github.com/openinf/util-object/issues",
   "homepage": "https://github.com/openinf/util-object#readme",
   "description": "Common JavaScript Object type-related utilities ",
   "devDependencies": {
+    "@types/node": "18.6.4",
     "@typescript-eslint/eslint-plugin": "5.32.0",
     "@typescript-eslint/parser": "5.32.0",
     "chai": "4.3.6",
     "eslint": "8.21.0",
     "eslint-config-prettier": "8.5.0",
+    "eslint-import-resolver-node": "0.3.6",
+    "eslint-plugin-etc": "2.0.2",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-only-warn": "1.0.3",
     "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-promise": "6.0.0",
+    "eslint-plugin-regexp": "1.8.0",
+    "eslint-plugin-simple-import-sort": "7.0.0",
+    "eslint-plugin-unicorn": "43.0.2",
+    "eslint-plugin-wix-editor": "3.3.0",
     "jasmine": "4.3.0",
     "jsdoc-to-markdown": "7.1.1",
     "prettier": "2.7.1",
