--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,23 +3,28 @@
     "allowSyntheticDefaultImports": true,
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
+    "composite": true,
     "declaration": true,
     "declarationMap": true,
+    "downlevelIteration": true,
     "esModuleInterop": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "forceConsistentCasingInFileNames": true,
+    "lib": ["ESNext"],
+    "module": "node16",
+    "moduleResolution": "node16",
     "noImplicitReturns": true,
+    "outDir": "lib",
+    "paths": {},
     "pretty": true,
+    "resolveJsonModule": true,
+    "rootDirs": ["src", "lib"],
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "target": "es2017",
-    "lib": ["es2017"],
-    "paths": {},
-    "composite": true,
-    "outDir": "./lib",
-    "rootDir": "./src",
-    "resolveJsonModule": true
+    "strictNullChecks": true,
+    "target": "ESNext",
+    "typeRoots": ["node_modules/@types"],
+    "types": ["node"]
   },
   "include": ["src/**/*.ts"]
 }
