--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "compile": "npm run compile-src && npm run compile-doc",
     "compile-src": "tsc --project ./",
-    "compile-doc": "jsdoc2md --template README.hbs --files index.js > ./README.md",
+    "compile-doc": "jsdoc2md --template README.hbs --files lib/index.js > ./README.md",
     "test": "npx jasmine"
   },
   "repository": "openinf/util-object",
