build(src,doc): prefer `prepare` lifecycle script
> For build steps that are not platform-specific, such as compiling
> CoffeeScript or other languages to JavaScript, use the `prepare`
> script to do this, and make the required package a `devDependency`.

Refs: https://docs.npmjs.com/cli/v8/configuring-npm/package-json#devdependencies

Signed-off-by: Derek Lewis <DerekNonGeneric@inf.is>

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "scripts": {
-    "compile": "npm run compile-src && npm run compile-doc",
+    "prepare": "npm run compile-src && npm run compile-doc",
     "compile-src": "tsc --project ./",
     "compile-doc": "jsdoc2md --template README.hbs --files lib/index.js > ./README.md",
     "test": "npx jasmine"
