fix(tsconfig): specify `src` as `rootDir`
Refs: https://www.typescriptlang.org/tsconfig#rootDir

Signed-off-by: Derek Lewis <DerekNonGeneric@inf.is>

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {},
     "pretty": true,
     "resolveJsonModule": true,
+    "rootDir": "src",
     "rootDirs": ["src", "lib"],
     "skipLibCheck": true,
     "sourceMap": true,
