fix(auto): reconfigure renovate lockfile disabled
This commit prevents renovatebot from making PRs about
lockfile maintenance.

Signed-off-by: Derek Lewis <DerekNonGeneric@inf.is>

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -6,7 +6,7 @@
     ":preserveSemverRanges",
     "github>whitesource/merge-confidence:beta"
   ],
-  "lockFileMaintenance": { "enabled": true },
+  "lockFileMaintenance": { "enabled": false },
   "postUpdateOptions": ["npmDedupe"],
   "platformCommit": true,
   "rangeStrategy": "pin",
