--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "@openinf/util-object",
   "version": "2.0.1",
+  "engines": {
+    "node": "^14.15.0 || ^16.13.0 || ^18.12.0",
+    "npm": "^6.14.8 || ^8.1.0 || ^8.19.2 || ^9.0.0",
+    "npx": "^6.14.8 || ^8.1.0 || ^8.19.2 || ^9.0.0"
+  },
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "scripts": {
