fix(ci): pull_request_target -> pull_request
Signed-off-by: DerekNonGeneric <dereknongeneric@open.inf.is>

--- a/.github/workflows/dependabot-auto-rename.yml
+++ b/.github/workflows/dependabot-auto-rename.yml
@@ -1,6 +1,6 @@
 name: Dependabot auto-rename
 on:
-    pull_request_target:
+    pull_request:
         types:
             - opened
             - edited
