--- a/.github/workflows/dependabot-auto-rename.yml
+++ b/.github/workflows/dependabot-auto-rename.yml
@@ -25,5 +25,7 @@ jobs:
               with:
                   github-token: '${{ secrets.GITHUB_TOKEN }}'
             - name: Rename PR title
+              env:
+                  GH_TOKEN: ${{ github.token }}
               run: |
                   gh pr edit '$PR_URL' --title 'build(deps-dev): bump % ${{ steps.dependabot-metadata.outputs.dependency-names }}@${{ steps.dependabot-metadata.outputs.new-version }}'
