--- a/.github/workflows/dependabot-auto-rename.yml
+++ b/.github/workflows/dependabot-auto-rename.yml
@@ -26,6 +26,6 @@ jobs:
                   github-token: '${{ secrets.GITHUB_TOKEN }}'
             - name: Rename PR title
               env:
-                  GH_TOKEN: ${{ github.token }}
+                  GH_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
               run: |
                   gh pr edit '$PR_URL' --title 'build(deps-dev): bump % ${{ steps.dependabot-metadata.outputs.dependency-names }}@${{ steps.dependabot-metadata.outputs.new-version }}'
